# serde-tc

./: Cargo.toml  LICENSE  README.md
common/: Cargo.toml
common/src/: crypto.rs  lib.rs  serde_hdk.rs  types.rs
serde-tc/: Cargo.toml
serde-tc-macro/: Cargo.toml  LICENSE
serde-tc-macro/src/: args.rs  augment.rs  dispatcher.rs  encoder.rs  fallible.rs  helper.rs  lib.rs  stub.rs
serde-tc/examples/: calculator.rs
serde-tc/src/: http.rs  lib.rs  network.rs
serde-tc/src/network/: auth.rs  auth_client.rs  auth_server.rs  utils.rs
serde-tc/tests/: integration_tests.rs
