[package]
name = "serde-tc-macro"
version = "0.4.0"
authors = ["Junha Yang <junhayang1@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Macro for serde-tc"
repository = "https://github.com/junha1/serde-tc"
keywords = ["rmi", "protocol", "serde", "serialization"]
categories = ["encoding"]
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
proc-macro-crate = "0.1.4"
proc-macro2 = "1.0"
syn = { version = "1.0.16", features = ["full", "extra-traits", "visit", "fold"] }
quote = "1.0"
heck = "0.3.2"

[lib]
proc-macro = true
