[package]
name = "serde-tc"
version = "0.1.0"
authors = ["Junha Yang <junhayang1@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Serde support for trait calls"
repository = "https://github.com/junha1/serde-tc"
keywords = ["rmi", "protocol", "serde", "serialization"]
categories = ["encoding"]
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
serde = { version = "1.0" }
async-trait = "0.1.42"
thiserror = "1.0"
serde-tc-macro = { version = "0.1", path = "../serde-tc-macro"}

[dev-dependencies]
serde_json = "1.0"