[package]
name = "serde-tc"
version = "0.3.4"
authors = ["Junha Yang <junhayang1@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Serde support for trait calls"
repository = "https://github.com/junha1/serde-tc"
keywords = ["rmi", "protocol", "serde", "serialization"]
categories = ["encoding"]
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.42"
thiserror = "1.0"
serde-tc-macro = { version = "=0.2.3", path = "../serde-tc-macro"}
serde_json = { version = "1.0" }
tokio = { version = "1.0", features = ["full"] }
anyhow = { version = "1.0" }
axum = { version = "0.5.11" }
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.3.0", features = ["cors"] }
