[package]
name = "serde-tc"
version = "0.4.0"
authors = ["Junha Yang <junhayang1@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Serde support for trait calls"
repository = "https://github.com/junha1/serde-tc"
keywords = ["rmi", "protocol", "serde", "serialization"]
categories = ["encoding"]
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.42"
thiserror = "1.0"
serde-tc-macro = { version = "=0.4.0", path = "../serde-tc-macro" }
serde_json = { version = "1.0" }
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6.8"
axum = { version = "0.6" }
tower-http = { version = "0.3.0", features = ["cors"] }
hdk-common = { version = "0.1.0", path = "../common" }
tower = "0.4.13"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["client"] }
futures = "0.3"
color-eyre = "0.6.2"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
